css - secao inicio

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja virtual online</title>
     <link rel="stylesheet" href="./style.css">
-    <link rel="" href="./src/images/logo.png"
+    <link rel="icon" type="image/x-icon" href="./src/images/logo.png">
 </head>
+<body>
     <header id="menu">
         <h1 id="logo"><strong id="logo-destaque">F</strong>ashion.on</h1>
         <nav>
@@ -23,5 +24,16 @@
             <button id="btn-contato">Contato</button>
         </article>
     </header>
+    <section id="inicio">
+        <article>
+            <h1>Nova moda<br>estilo então</h1>
+            <p>Roupas confortaveis e acessiveis a voce.a melhor loja de roupa virtual online.5% de desconto<br> na primeira compra com cupom fashin.on Umas das melhores llojas do Brasil.Oferecemos servicos <br>onlines e fisicos.</p>
+            <div>
+                <button id="btn-modas">Acesse novas modas</button>
+                <button id="btn-redes">Acesse redes-sociais <img src="./src/images/btn-seta.svg" alt="seta" class="svg" id="btn-seta"></alt></button>
+            </div>
+        </article>
+        <img src="./src/images/render.png" alt="moda-mulher" id="moda-mulher">
+    </section>
 </body>
 </html>
