--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </nav>
         <article>
             <img src="./src/images/pesquisa.svg" class="svg"/>
-            <img src="./src/images/carrinho-de-compras.svg" class="svg"/>
+            <img src="./src/images/carrinho-de-compras.svg" class="svg" id="carrinho"/>
             <button id="btn-contato">Contato</button>
+            <img src="./src/images/menu.svg" class="svg" id="nav-menu">
         </article>
     </header>
     <section id="inicio">
@@ -34,6 +35,35 @@
             </div>
         </article>
         <img src="./src/images/render.png" alt="moda-mulher" id="moda-mulher">
+    </section>
+    <section id="menu-filtro">
+        <nav>
+            <ul>
+                <li>
+                    <button class="btn-filter" id="btn-recentes">Modas recentes <img src="./src/images/btn-seta-baixo.svg" alt="seta" class="svg"></button>
+                </li>
+                <li>
+                    <button class="btn-filter">Homen <img src="./src/images/btn-seta-baixo.svg" alt="seta" class="svg"></button>
+                </li>
+                <li>
+                    <button class="btn-filter">Mulher <img src="./src/images/btn-seta-baixo.svg" alt="seta" class="svg"></button>
+                </li>
+                <li>
+                    <button class="btn-filter">Acessorios <img src="./src/images/btn-seta-baixo.svg" alt="seta" class="svg"></button>
+                </li>
+            </ul>
+        </nav>
+    </section>
+    <section id="filtros-moda">
+        <div>
+            <article>
+                <input type="text" name="pesquisa" placeholder="Pesquise"/>
+                <img src="./src/images/pesquisa.svg" alt="pesquisa" id="pesquisa"/>
+            </article>
+            <strong>
+                <p>Filtrar <strong id="palavra-chave">Recentes  <img src="./src/images/btn-seta-baixo.svg" alt="seta-baixo" id="btn-seta-baixo"/></strong></p>
+            </strong>
+        </div>
     </section>
 </body>
 </html>
