--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <article>
-            <img src="./src/images/pesquisa.svg" class="svg"/>
+            <img src="./src/images/pesquisa.svg" class="svg" id="pesquisa"/>
             <img src="./src/images/carrinho-de-compras.svg" class="svg" id="carrinho"/>
             <button id="btn-contato">Contato</button>
             <img src="./src/images/menu.svg" class="svg" id="nav-menu">
