--- a/index.html
+++ b/index.html
@@ -65,5 +65,16 @@
             </strong>
         </div>
     </section>
+    <section id="roupas">
+        <div id="card">
+            <img src="./src/images/casaco-2.webp" alt="casaco"/>
+            <article>
+                <p>Casaco para festa estilo bad boy</p>
+                <strong>
+                    <i>R$89,90 <i>+</i></i>
+                </strong>
+            </article>
+        </div>
+    </section>
 </body>
 </html>
